hphp/hack/test/typecheck/using/using_bad_hints.php.exp
File "using_bad_hints.php", line 13, characters 22-23:
Parameter with type 'Handle' must not implement IDisposable or IAsyncDisposable. Please use <<__AcceptDisposable>> attribute or create disposable object with 'using' statement instead. (Typing[4190])
File "using_bad_hints.php", line 14, characters 32-33:
Parameter with type 'IAsyncDisposable' must not implement IDisposable or IAsyncDisposable. Please use <<__AcceptDisposable>> attribute or create disposable object with 'using' statement instead. (Typing[4190])
File "using_bad_hints.php", line 16, characters 36-37:
Parameter with type 'AsyncHandle' must not implement IDisposable or IAsyncDisposable. Please use <<__AcceptDisposable>> attribute or create disposable object with 'using' statement instead. (Typing[4190])
